--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -9,7 +9,7 @@ exclude_remarks=(?i)(?:\d+(\.\d*)?\s*GB|traffic|expire|premium|github|isp|流量
 ;增强中国IP段：支持
 ;增强国外GFW：支持
 
-ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Cloudflarecn/Cloudflarecn.list
+ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Cloudflarecn/Cloudflarecn.yaml
 ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://cdn.jsdelivr.net/gh/cikichen/rules@main/clash/direct.list
@@ -20,7 +20,7 @@ ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_s
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaDNS/ChinaDNS.list
 ruleset=🎯 国内IP,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs.list
 ruleset=🎯 国内IP,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIpV6.list
-ruleset=🎯 国内域名,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.txt
+ruleset=🎯 国内域名,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.yaml
 ruleset=🎯 国内IP,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🛑 全球拦截,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
