--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -10,7 +10,7 @@ exclude_remarks=(?i)(?:\d+(\.\d*)?\s*GB|traffic|expire|premium|github|isp|流量
 ;增强国外GFW：支持
 
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Cloudflarecn/Cloudflarecn.yaml
-ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+;ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/direct.list
