--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -78,7 +78,7 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🤖 OpenAI`select`^((?!(HK|香港)).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🤖 GoogleBard`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=📥 PT`select`[]DIRECT`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
+custom_proxy_group=📥 PT`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
 custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(?=.*(🇭🇰|Hong ?Kong|港|\b(?:HK[G]?|HKT|HKBN|HGC|WTT|CMI)(\d+)?\b))^((?!实验性|日用|(?:[2-9][0-9]*|1[0-9]+)[x×]).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(?i)(?=.*(🇯🇵|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|Japan|\bJP[N]?(\d+)?\b))^((?!实验性|日用|(?:[2-9][0-9]*|1[0-9]+)[x×]).)*$`http://cp.cloudflare.com/generate_204`300,,50
