--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -9,14 +9,16 @@ exclude_remarks=(?i)(?:\d+(\.\d*)?\s*GB|traffic|expire|premium|github|isp|流量
 ;增强中国IP段：支持
 ;增强国外GFW：支持
 
+; === 基础设置 ===
+add_emoji=true
+remove_old_emoji=true
+
+; === 规则集 (已修复与策略组名称的一致性) ===
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Cloudflarecn/Cloudflarecn.yaml
-;ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/direct.list
-ruleset=📥 PT,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/pt.list
-;ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt
-;ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt
+ruleset=📥 下载专用,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/pt.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Classical.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaDNS/ChinaDNS.list
 ruleset=🎯 国内IP,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs.list
@@ -26,75 +28,95 @@ ruleset=🎯 国内IP,https://fastgh.lainbo.com/https://raw.githubusercontent.co
 ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🛑 全球拦截,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+
+; AI 相关
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/人工智能/人工智能.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/OtherAI.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Claude/Claude.list
-ruleset=🤖 GoogleBard,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BardAI/BardAI.list
+ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BardAI/BardAI.list
+
+; 流媒体与社交 (注意名称图标匹配)
 ruleset=📹 油管视频,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube.list
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=📢 谷歌服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.list
-ruleset=Ⓜ️ 微软服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.list
+ruleset=🇬 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=🇬 谷歌服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.list
+ruleset=🪟 微软服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🍎 苹果服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple.list
-ruleset=📲 电报消息,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram.list
+ruleset=✈️ 电报消息,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram.list
 ruleset=🎶 网易云音乐,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ruleset=🌍 国外媒体,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🔰 战网服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Blizzard/Blizzard.list
-ruleset=🎮 游戏平台,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Epic/Epic.list
-ruleset=🎮 游戏平台,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Sony/Sony.list
-ruleset=🎮 游戏平台,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.list
-ruleset=🎮 Xbox,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Xbox/Xbox.list
-;ruleset=🔰 D4,https://fastgh.lainbo.com/https://gist.githubusercontent.com/cikichen/276e15d11a88c29ec6f69154ad7457fa/raw/D4.list
-;ruleset=🎮 D3,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@refs/heads/master/rule/Clash/DiabloIII/DiabloIII.list
+
+; 游戏相关 (统一指向“🎮 游戏服务”)
+ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Blizzard/Blizzard.list
+ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Epic/Epic.list
+ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Sony/Sony.list
+ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.list
+ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Xbox/Xbox.list
+
+; 其他
 ruleset=🌍 GFW,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt
-ruleset=🇺🇲 GitHub,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
-; ruleset=🚀 节点选择,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+; GitHub 没有单独分组了，指向节点选择
+ruleset=🚀 节点选择,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
+
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🚀 手动切换`select`.*^((?!(网易|音乐|解锁|Music|NetEase)).)*$
-custom_proxy_group=♻️ 自动选择`url-test`^((?!(网抑|网易|解灰|NeteaseMusic)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`[]🤖 人工智能`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🎶 网易云音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase|灰)
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🤖 人工智能`[]🇺🇲 美国节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🚀 手动切换`^((?!(HK)).)*$
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🔰 战网服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-;custom_proxy_group=🔰 D4`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-;custom_proxy_group=🎮 D3`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🎮 Xbox`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🇺🇲 GitHub`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌍 GFW`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🎯 国内IP`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🎯 国内域名`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🤖 人工智能`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇮🇳 印度节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🤖 GoogleBard`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=📥 PT`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(?=.*(🇭🇰|Hong ?Kong|港|\b(?:HK[G]?|HKT|HKBN|HGC|WTT|CMI)(\d+)?\b))^((?!实验性|日用|(?:[2-9][0-9]*|1[0-9]+)[x×]).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(?i)(?=.*(🇯🇵|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|Japan|\bJP[N]?(\d+)?\b))^((?!实验性|日用|(?:[2-9][0-9]*|1[0-9]+)[x×]).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(?i)(?=.*(🇺🇸|United ?States|美[国國]|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|\bUS[A]?(\d+)?\b|America))^((?!实验性|日用|San ?Jose|(?:[2-9][0-9]*|1[0-9]+)[x×]).)*$`http://cp.cloudflare.com/generate_204`300,,80
-custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(?=.*(🇨🇳|Taiwan|台湾|新北|彰化|\b(?:TW[N]?|CHT|HINET)(\d+)?\b))^((?!实验性|日用|(?:[2-9][0-9]*|1[0-9]+)[x×]).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城节点`url-test`(?i)(?=.*(🇸🇬|Singapore|新加坡|狮城|\bSG[P]?(\d+)?\b))^((?!实验性|日用|(?:[2-9][0-9]*|1[0-9]+)[x×]).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇦🇷 阿根廷节点`url-test`(阿根廷|AR|ar)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇷 土耳其节点`url-test`(土|TR|tr)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇪🇺 欧洲节点`url-test`(?i)(?=.*(德国|德意志|法兰克福|Germany|英国|伦敦|United.*?Kingdom|Britain|London|England|法国|巴黎|France|Paris|爱尔兰|Ireland|都柏林|荷兰|阿姆斯特丹|Netherlands|波兰|Poland|奥地利|维也纳|Austria|比利时|Belgium|保加利亚|Bulgaria|瑞士|苏黎世|Switzerland|捷克|Czech|芬兰|赫尔辛基|Finland|希腊|Greece|匈牙利|Hungary|意大利|米兰|Italy|挪威|Norway|葡萄牙|Portugal|俄罗斯|莫斯科|圣彼得堡|瑞典|Sweden|西班牙|Spain|🇺🇦|🇪🇺|🇦🇹|🇧🇪|🇧🇬|🇨🇭|🇨🇿|🇩🇪|🇩🇰|🇪🇪|🇪🇸|🇫🇮|🇫🇷|🇬🇧|🇬🇷|🇭🇺|🇮🇪|🇮🇹|🇱🇺|🇳🇱|🇳🇴|🇵🇱|🇵🇹|🇷🇴|🇷🇺|🇸🇪))^((?!实验性|日用|(?:[2-9][0-9]*|1[0-9]+)[x×]).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇮🇳 印度节点`url-test`(?i)(?=.*(印度|孟买|加尔各答|贾坎德|泰米尔纳德|India|Mumbai|\bIN[D]?\b))^((?!实验性|日用|(?:[2-9][0-9]*|1[0-9]+)[x×]).)*$`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
-custom_proxy_group=🗺️ 其他节点`url-test`^((?!🇭🇰|Hong ?Kong|港|HKT|HKBN|HGC|WTT|CMI|🇯🇵|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|Japan|J P N|🇺🇸|United ?States|美[国國]|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|USA|America|🇨🇳|Taiwan|台湾|新北|彰化|CHT|HINET|🇸🇬|Singapore|新加坡|狮城|SGP|🇰🇷|Korea|KOR|首尔|韩|韓|🇦🇷|阿根廷|AR|ar|🇹🇷|土|TR|tr|🇪🇺|欧洲|德国|德意志|法兰克福|Germany|英国|伦敦|United.*?Kingdom|Britain|London|England|法国|巴黎|France|Paris|爱尔兰|Ireland|都柏林|荷兰|阿姆斯特丹|Netherlands|波兰|Poland|奥地利|维也纳|Austria|比利时|Belgium|保加利亚|Bulgaria|瑞士|苏黎世|Switzerland|捷克|Czech|芬兰|赫尔辛基|Finland|希腊|Greece|匈牙利|Hungary|意大利|米兰|Italy|挪威|Norway|葡萄牙|Portugal|俄罗斯|莫斯科|圣彼得堡|瑞典|Sweden|西班牙|Spain|🇮🇳|印度|孟买|加尔各答|贾坎德|泰米尔纳德|India|Mumbai|IND|🇦🇺|澳大利亚|澳洲|悉尼|Australia|Sydney|AUS|🇩🇪|德国|德意志|法兰克福|Germany|DEU|🇨🇦|加拿大|Canada|CAN|🇬🇧|英国|伦敦|United.*?Kingdom|Britain|London|England|UK|GBR|🇫🇷|法国|巴黎|France|Paris|FRA|🇮🇪|爱尔兰|都柏林|Ireland|IEA|🇳🇱|荷兰|阿姆斯特丹|Netherlands|NLD|🇵🇱|波兰|Poland|POL).)*$`http://cp.cloudflare.com/generate_204`300,,50
+; ============================================
+; 1. 核心主策略 (Main Group)
+; ============================================
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚑 故障转移`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]🚀 手动切换`[]DIRECT
 
-add_emoji=false
-remove_old_emoji=false
+; ============================================
+; 2. 自动化与辅助
+; ============================================
+custom_proxy_group=🚀 手动切换`select`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🚑 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
+
+; ============================================
+; 3. 场景功能组
+; ============================================
+
+custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🚀 手动切换
+
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]DIRECT
+
+custom_proxy_group=🎥 奈飞节点`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🌴 东南亚节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区
+
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🌎 南美节点`[]🗺️ 其他地区
+
+custom_proxy_group=✈️ 电报消息`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点`[]🌴 东南亚节点`[]DIRECT
+
+custom_proxy_group=🎮 游戏服务`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点
+
+custom_proxy_group=🪟 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点
+
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点
+
+custom_proxy_group=🇬 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点
+
+custom_proxy_group=🎶 网易云音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase|灰)
+
+custom_proxy_group=📥 下载专用`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择
+
+; ============================================
+; 4. 地区分组 (Regional Groups)
+; ============================================
+
+custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(🇭🇰|港|HK|Hong)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(🇨🇳|🇹🇼|台湾|新北|彰化|TW|Taiwan)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(?i)(🇯🇵|日本|川日|东京|大阪|埼玉|JP|Japan)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(?i)(🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|西雅图|芝加哥|US|United States|America)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`(?i)(🇸🇬|新加坡|狮城|SG|Singapore)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(?i)(🇰🇷|韩国|首尔|KR|Korea)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🌴 东南亚节点`url-test`(?i)(🇸🇬|🇲🇾|🇹🇭|🇻🇳|🇵🇭|🇮🇩|🇰🇭|🇲🇲|🇧🇳|东南亚|新加坡|狮城|马来|泰国|越南|菲律宾|印尼|柬埔寨|缅甸|文莱|SG|Singapore|MY|TH|VN|PH|ID|KH|MM|BN)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇪🇺 欧洲节点`url-test`(?i)(🇪🇺|🇬🇧|🇩🇪|🇫🇷|🇳🇱|🇮🇹|🇷🇺|🇪🇸|🇵🇹|🇨🇭|🇸🇪|🇳🇴|🇫🇮|🇩🇰|🇮🇪|🇦🇹|🇨🇿|🇬🇷|🇧🇪|🇭🇺|🇵🇱|🇺🇦|🇮🇸|欧洲|英国|德国|法国|荷兰|意大利|俄罗斯|西班牙|葡萄牙|瑞士|瑞典|挪威|芬兰|丹麦|爱尔兰|奥地利|捷克|希腊|比利时|匈牙利|波兰|乌克兰|冰岛|EU|UK|DE|FR|NL|IT|RU|ES|PT|CH|SE|NO|FI|DK|IE|AT|CZ|GR|BE|HU|PL|UA|IS)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🌎 南美节点`url-test`(?i)(🇦🇷|🇧🇷|🇨🇱|🇨🇴|🇵🇪|🇲🇽|🇺🇾|南美|阿根廷|巴西|智利|哥伦比亚|秘鲁|墨西哥|乌拉圭|AR|BR|CL|CO|PE|MX|UY|Latin|America)^((?!网站|地址|剩余|过期).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇨🇦 加拿大节点`url-test`(?i)(🇨🇦|加拿大|蒙特利尔|温哥华|CA|Canada)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇦🇺 澳洲节点`url-test`(?i)(🇦🇺|澳洲|澳大利亚|悉尼|墨尔本|AU|Australia)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇹🇷 土耳其节点`url-test`(?i)(🇹🇷|土耳其|TR|Turkey)^((?!网站|地址|剩余|过期).)*$`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🗺️ 其他地区`url-test`(?i)^((?!(🇭🇰|港|HK|Hong|🇨🇳|🇹🇼|TW|Tai|🇯🇵|JP|Japan|🇺🇸|美|US|States|🇸🇬|SG|Sing|🇰🇷|KR|Korea|🇪🇺|EU|欧|🇬🇧|UK|🇩🇪|DE|🇫🇷|FR|🇳🇱|NL|🇷🇺|RU|🇪🇸|ES|🇨🇭|CH|🇸🇪|SE|🇳🇴|NO|🇫🇮|FI|🇨🇦|CA|Can|🇦🇺|AU|Aus|🇲🇾|MY|🇹🇭|TH|🇻🇳|VN|🇵🇭|PH|🇮🇩|ID|🇦🇷|AR|🇧🇷|BR|🇨🇱|CL|🇹🇷|TR|网站|地址|剩余|过期|实验性|日用|重置)).)*$`http://cp.cloudflare.com/generate_204`300,,50
 
 emoji=(?i:traffic|流量|应急),⌛
 emoji=(?i:expire|时间|过期),🕒
