Refactor ACL4SSR configuration and comments
Updated comments and ruleset references in the configuration file.

--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -2,18 +2,14 @@
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
 exclude_remarks=(?i)(?:\d+(\.\d*)?\s*GB|traffic|expire|premium|github|isp|流量|网址|套餐|应急|时间|重置|剩余|[到过]期|订阅)
-;去广告：支持
-;自动测速：支持
-;微软分流：支持
-;苹果分流：支持
-;增强中国IP段：支持
-;增强国外GFW：支持
 
 ; === 基础设置 ===
 add_emoji=true
 remove_old_emoji=true
 
-; === 规则集 (已修复与策略组名称的一致性) ===
+; ============================================
+; 1. 规则集引用 (Rulesets)
+; ============================================
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Cloudflarecn/Cloudflarecn.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.list
@@ -29,13 +25,13 @@ ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubuserconten
 ruleset=🛑 全球拦截,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 
-; AI 相关
+; AI
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/人工智能/人工智能.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/OtherAI.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Claude/Claude.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BardAI/BardAI.list
 
-; 流媒体与社交 (注意名称图标匹配)
+; 媒体与服务
 ruleset=📹 油管视频,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube.list
 ruleset=🇬 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=🇬 谷歌服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.list
@@ -45,7 +41,7 @@ ruleset=✈️ 电报消息,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule
 ruleset=🎶 网易云音乐,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ruleset=🌍 国外媒体,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 
-; 游戏相关 (统一指向“🎮 游戏服务”)
+; 游戏
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Blizzard/Blizzard.list
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Epic/Epic.list
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Sony/Sony.list
@@ -54,56 +50,44 @@ ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_s
 
 ; 其他
 ruleset=🌍 GFW,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt
-; GitHub 没有单独分组了，指向节点选择
 ruleset=🚀 节点选择,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
-
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ============================================
-; 1. 核心主策略 (Main Group)
+; 2. 策略组定义 (Proxy Groups)
 ; ============================================
+
+; 2.1 主控组
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🚑 故障转移`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]🚀 手动切换`[]DIRECT
 
-; ============================================
-; 2. 自动化与辅助
-; ============================================
+; 2.2 基础逻辑组 (【修复重点】这些组必须存在，否则报错)
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🎯 国内IP`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🎯 国内域名`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=📥 下载专用`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择
+
+; 2.3 自动化与辅助
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚑 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 
-; ============================================
-; 3. 场景功能组
-; ============================================
-
+; 2.4 场景功能组
 custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🚀 手动切换
-
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]DIRECT
-
 custom_proxy_group=🎥 奈飞节点`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🌴 东南亚节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区
-
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🌎 南美节点`[]🗺️ 其他地区
-
 custom_proxy_group=✈️ 电报消息`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点`[]🌴 东南亚节点`[]DIRECT
-
 custom_proxy_group=🎮 游戏服务`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点
-
 custom_proxy_group=🪟 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点
-
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点
-
 custom_proxy_group=🇬 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点
-
 custom_proxy_group=🎶 网易云音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase|灰)
 
-custom_proxy_group=📥 下载专用`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择
-
-; ============================================
-; 4. 地区分组 (Regional Groups)
-; ============================================
-
+; 2.5 地区分组
 custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(🇭🇰|港|HK|Hong)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(🇨🇳|🇹🇼|台湾|新北|彰化|TW|Taiwan)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(?i)(🇯🇵|日本|川日|东京|大阪|埼玉|JP|Japan)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
