Refactor ACL4SSR configuration with new rules and groups
Updated ruleset references and added custom proxy groups for various services.

--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -2,21 +2,21 @@
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
 exclude_remarks=(?i)(?:\d+(\.\d*)?\s*GB|traffic|expire|premium|github|isp|流量|网址|套餐|应急|时间|重置|剩余|[到过]期|订阅)
-;去广告：支持
-;自动测速：支持
-;微软分流：支持
-;苹果分流：支持
-;增强中国IP段：支持
-;增强国外GFW：支持
 
+; === 1. 基础设置 (建议开启 Emoji 处理) ===
+add_emoji=true
+remove_old_emoji=true
+enable_rule_generator=true
+overwrite_original_rules=true
+
+; ============================================
+; 2. 规则集引用 (保持你原始的名称不变)
+; ============================================
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Cloudflarecn/Cloudflarecn.yaml
-;ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/direct.list
 ruleset=📥 PT,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/pt.list
-;ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt
-;ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Classical.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaDNS/ChinaDNS.list
 ruleset=🎯 国内IP,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs.list
@@ -26,6 +26,8 @@ ruleset=🎯 国内IP,https://fastgh.lainbo.com/https://raw.githubusercontent.co
 ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🛑 全球拦截,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+
+; 媒体与服务
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/人工智能/人工智能.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/OtherAI.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Claude/Claude.list
@@ -38,88 +40,72 @@ ruleset=🍎 苹果服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_s
 ruleset=📲 电报消息,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram.list
 ruleset=🎶 网易云音乐,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ruleset=🌍 国外媒体,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+
+; 游戏
 ruleset=🔰 战网服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Blizzard/Blizzard.list
 ruleset=🎮 游戏平台,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Epic/Epic.list
 ruleset=🎮 游戏平台,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Sony/Sony.list
 ruleset=🎮 游戏平台,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.list
 ruleset=🎮 Xbox,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Xbox/Xbox.list
-;ruleset=🔰 D4,https://fastgh.lainbo.com/https://gist.githubusercontent.com/cikichen/276e15d11a88c29ec6f69154ad7457fa/raw/D4.list
-;ruleset=🎮 D3,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@refs/heads/master/rule/Clash/DiabloIII/DiabloIII.list
+
+; 兜底
 ruleset=🌍 GFW,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt
 ruleset=🇺🇲 GitHub,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
-; ruleset=🚀 节点选择,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ============================================
-; 1. 核心主策略 (Main Group)
+; 3. 策略组定义 (补全了所有缺失的组！)
 ; ============================================
+
+; 3.1 主节点选择
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]🚀 手动切换`[]DIRECT
 
-; ============================================
-; 2. 自动化与辅助
-; ============================================
+; 3.2 【关键修复】补全规则集引用的基础策略组
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🎯 国内IP`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🎯 国内域名`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=📥 PT`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择
+
+; 3.3 自动化与辅助
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-; ============================================
-; 3. 场景功能组
-; ============================================
-; AI 建议保持现状，优先选更稳的独立狮城节点，而不是混杂的东南亚组
-custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🚀 手动切换
 
-; 流媒体等服务：现在选“🌴 东南亚节点”也能包含新加坡了
+; 3.4 功能分组 (名称与你的 ruleset 100% 对应)
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]DIRECT
-custom_proxy_group=🎥 奈飞节点`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🌴 东南亚节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🇹🇷 土耳其节点`[]🗺️ 其他地区
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🌎 南美节点`[]🗺️ 其他地区
-
-; 服务类
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点`[]🌴 东南亚节点`[]DIRECT
-custom_proxy_group=🎮 游戏服务`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点
+custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点
+custom_proxy_group=🎶 网易云音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase|灰)
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点
-custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点
+custom_proxy_group=🔰 战网服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点
+custom_proxy_group=🎮 Xbox`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点
+custom_proxy_group=🇺🇲 GitHub`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
+custom_proxy_group=🌍 GFW`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择
+custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🚀 手动切换
+custom_proxy_group=🤖 GoogleBard`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🚀 手动切换
 
-; 兜底类
-custom_proxy_group=📥 下载专用`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择
-
-; ============================================
-; 4. 地区分组 (Regional Groups)
-; ============================================
-
-; --- 第一梯队：核心独立区 ---
+; 3.5 地区分组 (使用增强版正则)
 custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(🇭🇰|港|HK|Hong)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(🇨🇳|🇹🇼|台湾|新北|彰化|TW|Taiwan)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(?i)(🇯🇵|日本|川日|东京|大阪|埼玉|JP|Japan)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(?i)(🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|西雅图|芝加哥|US|United States|America)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城节点`url-test`(?i)(🇸🇬|新加坡|狮城|SG|Singapore)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(?i)(🇰🇷|韩国|首尔|KR|Korea)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-
-; --- 第二梯队：广域与补充区 ---
-
-; [修改] 东南亚：现在包含 新加坡(🇸🇬) + 马泰越菲印尼等
-; 逻辑：不仅匹配 MY/TH 等，也显式匹配 SG/Singapore
 custom_proxy_group=🌴 东南亚节点`url-test`(?i)(🇸🇬|🇲🇾|🇹🇭|🇻🇳|🇵🇭|🇮🇩|🇰🇭|🇲🇲|🇧🇳|东南亚|新加坡|狮城|马来|泰国|越南|菲律宾|印尼|柬埔寨|缅甸|文莱|SG|Singapore|MY|TH|VN|PH|ID|KH|MM|BN)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-
-; 欧洲全集
 custom_proxy_group=🇪🇺 欧洲节点`url-test`(?i)(🇪🇺|🇬🇧|🇩🇪|🇫🇷|🇳🇱|🇮🇹|🇷🇺|🇪🇸|🇵🇹|🇨🇭|🇸🇪|🇳🇴|🇫🇮|🇩🇰|🇮🇪|🇦🇹|🇨🇿|🇬🇷|🇧🇪|🇭🇺|🇵🇱|🇺🇦|🇮🇸|欧洲|英国|德国|法国|荷兰|意大利|俄罗斯|西班牙|葡萄牙|瑞士|瑞典|挪威|芬兰|丹麦|爱尔兰|奥地利|捷克|希腊|比利时|匈牙利|波兰|乌克兰|冰岛|EU|UK|DE|FR|NL|IT|RU|ES|PT|CH|SE|NO|FI|DK|IE|AT|CZ|GR|BE|HU|PL|UA|IS)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
-
-; 南美全集
 custom_proxy_group=🌎 南美节点`url-test`(?i)(🇦🇷|🇧🇷|🇨🇱|🇨🇴|🇵🇪|🇲🇽|🇺🇾|南美|阿根廷|巴西|智利|哥伦比亚|秘鲁|墨西哥|乌拉圭|AR|BR|CL|CO|PE|MX|UY|Latin|America)^((?!网站|地址|剩余|过期).)*$`http://cp.cloudflare.com/generate_204`300,,50
-
-; 单独国家补充
 custom_proxy_group=🇨🇦 加拿大节点`url-test`(?i)(🇨🇦|加拿大|蒙特利尔|温哥华|CA|Canada)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇦🇺 澳洲节点`url-test`(?i)(🇦🇺|澳洲|澳大利亚|悉尼|墨尔本|AU|Australia)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇹🇷 土耳其节点`url-test`(?i)(🇹🇷|土耳其|TR|Turkey)^((?!网站|地址|剩余|过期).)*$`http://cp.cloudflare.com/generate_204`300,,50
-
-; --- 第三梯队：终极兜底 ---
-; 逻辑维持不变：排除掉所有已知的关键词。由于新加坡关键词已在排除列表中(🇸🇬|SG)，所以新加坡节点不会掉进这里，而是进狮城组和东南亚组。
 custom_proxy_group=🗺️ 其他地区`url-test`(?i)^((?!(🇭🇰|港|HK|Hong|🇨🇳|🇹🇼|TW|Tai|🇯🇵|JP|Japan|🇺🇸|美|US|States|🇸🇬|SG|Sing|🇰🇷|KR|Korea|🇪🇺|EU|欧|🇬🇧|UK|🇩🇪|DE|🇫🇷|FR|🇳🇱|NL|🇷🇺|RU|🇪🇸|ES|🇨🇭|CH|🇸🇪|SE|🇳🇴|NO|🇫🇮|FI|🇨🇦|CA|Can|🇦🇺|AU|Aus|🇲🇾|MY|🇹🇭|TH|🇻🇳|VN|🇵🇭|PH|🇮🇩|ID|🇦🇷|AR|🇧🇷|BR|🇨🇱|CL|🇹🇷|TR|网站|地址|剩余|过期|实验性|日用|重置)).)*$`http://cp.cloudflare.com/generate_204`300,,50
-
-add_emoji=false
-remove_old_emoji=false
 
 emoji=(?i:traffic|流量|应急),⌛
 emoji=(?i:expire|时间|过期),🕒
