Refactor ruleset references and group definitions

--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -3,20 +3,21 @@
 ;acl4SSR规则
 exclude_remarks=(?i)(?:\d+(\.\d*)?\s*GB|traffic|expire|premium|github|isp|流量|网址|套餐|应急|时间|重置|剩余|[到过]期|订阅)
 
-; === 1. 基础设置 (建议开启 Emoji 处理) ===
+; === 基础设置 ===
 add_emoji=true
 remove_old_emoji=true
 enable_rule_generator=true
 overwrite_original_rules=true
 
 ; ============================================
-; 2. 规则集引用 (保持你原始的名称不变)
+; 1. 规则集引用 (Rulesets)
 ; ============================================
+
+; 基础直连与拦截
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Cloudflarecn/Cloudflarecn.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/direct.list
-ruleset=📥 PT,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/pt.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Classical.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaDNS/ChinaDNS.list
 ruleset=🎯 国内IP,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs.list
@@ -24,16 +25,19 @@ ruleset=🎯 国内IP,https://fastgh.lainbo.com/https://raw.githubusercontent.co
 ruleset=🎯 国内域名,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.yaml
 ruleset=🎯 国内IP,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=📥 PT,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/pt.list
 ruleset=🛑 全球拦截,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 
-; 媒体与服务
+; AI
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/人工智能/人工智能.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/OtherAI.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Claude/Claude.list
-ruleset=🤖 GoogleBard,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BardAI/BardAI.list
+ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BardAI/BardAI.list
+
+; 媒体与服务
 ruleset=📹 油管视频,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube.list
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.list
 ruleset=Ⓜ️ 微软服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🍎 苹果服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple.list
@@ -42,26 +46,26 @@ ruleset=🎶 网易云音乐,https://fastgh.lainbo.com/https://raw.githubusercon
 ruleset=🌍 国外媒体,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 
 ; 游戏
-ruleset=🔰 战网服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Blizzard/Blizzard.list
-ruleset=🎮 游戏平台,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Epic/Epic.list
-ruleset=🎮 游戏平台,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Sony/Sony.list
-ruleset=🎮 游戏平台,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.list
-ruleset=🎮 Xbox,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Xbox/Xbox.list
+ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Blizzard/Blizzard.list
+ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Epic/Epic.list
+ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Sony/Sony.list
+ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.list
+ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Xbox/Xbox.list
 
-; 兜底
-ruleset=🌍 GFW,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt
+; 其他 (GFW 指向 漏网之鱼)
+ruleset=🐟 漏网之鱼,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt
 ruleset=🇺🇲 GitHub,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; ============================================
-; 3. 策略组定义 (补全了所有缺失的组！)
+; 2. 策略组定义 (Proxy Groups)
 ; ============================================
 
-; 3.1 主节点选择
+; 2.1 主控组
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]🚀 手动切换`[]DIRECT
 
-; 3.2 【关键修复】补全规则集引用的基础策略组
+; 2.2 基础逻辑组
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🎯 国内IP`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🎯 国内域名`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
@@ -70,29 +74,24 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=📥 PT`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择
 
-; 3.3 自动化与辅助
+; 2.3 自动化与辅助
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 
-; 3.4 功能分组 (名称与你的 ruleset 100% 对应)
+; 2.4 功能分组
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]DIRECT
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🌎 南美节点`[]🗺️ 其他地区
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点`[]🌴 东南亚节点`[]DIRECT
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点
-custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点
+custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]🤖 人工智能`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇪🇺 欧洲节点
 custom_proxy_group=🎶 网易云音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase|灰)
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🤖 人工智能`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点
-custom_proxy_group=🔰 战网服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点
-custom_proxy_group=🎮 Xbox`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点
+custom_proxy_group=🎮 游戏服务`select`[]DIRECT`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇸🇬 狮城节点`[]🌴 东南亚节点
 custom_proxy_group=🇺🇲 GitHub`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=🌍 GFW`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择
 custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🚀 手动切换
-custom_proxy_group=🤖 GoogleBard`select`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🚀 手动切换
 
-; 3.5 地区分组 (使用增强版正则)
+; 2.5 地区分组
 custom_proxy_group=🇭🇰 香港节点`url-test`(?i)(🇭🇰|港|HK|Hong)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇨🇳 台湾节点`url-test`(?i)(🇨🇳|🇹🇼|台湾|新北|彰化|TW|Taiwan)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(?i)(🇯🇵|日本|川日|东京|大阪|埼玉|JP|Japan)^((?!网站|地址|剩余|过期|实验性|日用|重置).)*$`http://cp.cloudflare.com/generate_204`300,,50
