Update rulesets to consolidate domestic IPs

--- a/ACL4SSR_WithChinaIp_WithGFW.ini
+++ b/ACL4SSR_WithChinaIp_WithGFW.ini
@@ -13,29 +13,31 @@ overwrite_original_rules=true
 ; 1. 规则集引用 (Rulesets)
 ; ============================================
 
-; 基础直连与拦截
+; --- 直连类 (国内域名/IP 全部合并至 '🎯 全球直连') ---
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Cloudflarecn/Cloudflarecn.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/direct.list
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Classical.yaml
 ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaDNS/ChinaDNS.list
-ruleset=🎯 国内IP,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs.list
-ruleset=🎯 国内IP,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIpV6.list
-ruleset=🎯 国内域名,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.yaml
-ruleset=🎯 国内IP,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ChinaIPs/ChinaIPs.list
+ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIpV6.list
+ruleset=🎯 全球直连,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China_Domain.yaml
+ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+
+; --- 拦截与下载 ---
 ruleset=📥 PT,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/pt.list
 ruleset=🛑 全球拦截,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 
-; AI
+; --- AI (合并 Bard) ---
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/人工智能/人工智能.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/cikichen/rules@main/clash/OtherAI.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Claude/Claude.list
 ruleset=🤖 人工智能,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BardAI/BardAI.list
 
-; 媒体与服务
+; --- 媒体与服务 (合并 FCM) ---
 ruleset=📹 油管视频,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube.list
 ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.list
@@ -45,14 +47,14 @@ ruleset=📲 电报消息,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_s
 ruleset=🎶 网易云音乐,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ruleset=🌍 国外媒体,https://fastgh.lainbo.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 
-; 游戏
+; --- 游戏 (合并所有平台) ---
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Blizzard/Blizzard.list
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Epic/Epic.list
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Sony/Sony.list
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Steam/Steam.list
 ruleset=🎮 游戏服务,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Xbox/Xbox.list
 
-; 其他 (GFW 指向 漏网之鱼)
+; --- 其他兜底 ---
 ruleset=🐟 漏网之鱼,https://fastly.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt
 ruleset=🇺🇲 GitHub,https://fastly.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
 ruleset=🎯 全球直连,[]GEOIP,CN
@@ -65,10 +67,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ; 2.1 主控组
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🌴 东南亚节点`[]🇪🇺 欧洲节点`[]🇨🇦 加拿大节点`[]🇦🇺 澳洲节点`[]🌎 南美节点`[]🗺️ 其他地区`[]🚀 手动切换`[]DIRECT
 
-; 2.2 基础逻辑组
+; 2.2 基础逻辑组 (国内IP/域名已合并至 全球直连)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🎯 国内IP`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=🎯 国内域名`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=📥 PT`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
